--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,10 @@
 
 /* Your CSS Code here. */
+#delhi{
+	width:600px;
+	margin:10px;
+	Padding: 15px;
+	Border-left:8px solid green;
+	background-color: #f8fffe;
+	Font-weight:Bold;
+}
